The birth of 'div-inception' (fixed alignment issues with top section of website

--- a/style.css
+++ b/style.css
@@ -4,12 +4,23 @@ body {
     margin: 0;
 }
 
-.header {
-    display: flex;
-    justify-content: center;
+.div-inception {
     background-color: #1F2937;
+}
+
+.top {
+    display: flex;
+    flex-direction: column;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.header, .main {
+    display: flex;
     color: white;
     padding: 16px;
+    gap: 30px;
+    justify-content: space-between;
 }
 
 .header-logo {
@@ -26,12 +37,12 @@ ul {
     color: #E5E7EB;
 }
 
-.header h1 {
+.main h1 {
     font-size: 48px;
     font-weight: 900;
 }
 
-.header p {
+.main p {
     font-size: 18px;
     color: #E5E7EB;
 }
@@ -44,6 +55,17 @@ a, a:visited {
 button {
     background-color: #3882F6;
     color: white;
+    padding: 5px 15px;
+    border: none;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #3474da;
+}
+
+button:active {
+    transform: scale(0.95);
 }
 
 .body h1 {
